--- a/communs01/summary01.tex
+++ b/communs01/summary01.tex
@@ -2,6 +2,7 @@
   % Packages and settings
   \usepackage{fontspec}
     \setmainfont{Charis SIL}
+  \usepackage[margin=1.0in]{geometry}
   \usepackage[style=apa, backend=biber]{biblatex}
     \addbibresource{References.bib}
 
@@ -13,17 +14,47 @@
   % New commands
   \newcommand{\orth}[1]{$\langle$#1$\rangle$}
   \newcommand{\lexi}[1]{\textit{#1}}
-  \newcommand{\gloss}[1]{`#1'}
-  \newcommand{\image}[1]{
-    \begin{tabular}[t]{c}
-      \\
-      \includegraphics[scale=0.7]{#1}
-    \end{tabular}
-  }
 
 \begin{document}
   \maketitle
   \fullcitebib{mills_sociological_2000}
-  \section{Some Section}
-    Some text. \parencite{mills_sociological_2000}
+  \section{Bureaucratic Ethos}
+    \subsection{Overview}
+      Mills sees social science as having become focused on conservative managerial concerns by his time to the exclusion of social problems whose solutions might actually enact good in the world.
+      For example, he provides a long quote from Lazarsfeld, who he describes earlier as an abstract empiricist, in which Lazarsfeld describes social science as far too new of a field to be able to attain the power to address social problems, which Lazarsfeld describes as ``social engineering''.
+      Mills calls this resulting version of social science ``bureaucratic social science''.
+      The result is research that serves ``to increase the efficiency and reputation'' of the businesses that are able to fund expensive research.
+
+      In fact, Mills suggests that businesses are nearly the only entities that can afford to fund such research, adding that states and occasionally foundations do so, as well.
+      However, when the latter do so, they have much the same concerns as any business would, which are practical and uninterested in solving social problems.
+      This ``bureaucratic ethos'' then spreads into the realms that social science has more connection with than the business world.
+
+    \subsection{Research institutions as training grounds}
+      Mills describes research institutions as playing a role in training people to partake in this bureaucratic form of social science, notably two types: administrators and younger research technicians.
+      Administrators obtain prestige by obtaining varied connections that give them control over what sort of research gets done.
+      They do not wish to draw unwanted attention, though, so they take on very large projects that have need of administration but that are also trivial in terms of their applications to social problems.
+
+      Technicians, on the other hand, are patient and methodical people who nonetheless lack the requisite curiosity to ask questions of import.
+      They come from high schools where classical scholarship is not imparted on them.
+      Additionally, they treat their work as a career and treat social philosophy as a waste of time that involves mostly speculation.
+
+    \subsection{Academic cliques}
+      Cliques in academia, according to Mills, set the terms and rewards for competition in a field.
+      This was not new at the time, but the bureaucratic ethos was penetrating prominent cliques.
+      For example, in the past, reputations were built off of publishing good ideas, but at the time, reputations had become the result of having the material means to do things such as buy books and equipment to which most academics had little access.
+
+      There is also competition between cliques, which works as a sort of survival of the fittest where the winners get to train the succeeding generation in their image.
+      When a clique is attacked from outside, it will deny its very existence as a defense.
+      This is similar to the ``statesmen'' who wish to speak for all cliques: they will deny the differences between cliques in order to make themselves appear to stand above all others.
+      Both of these ends are achieved typically through book reviews.
+
+      However, there are also the ``unattached'' who do not belong to any cliques.
+      These people may be friendly with cliques, in which case they are used as needed.
+      If they are unfriendly and unable to be ignored, they are dealt with in much the same way as competing cliques: book reviews are used to discredit them.
+
+    \subsection{Social science as human engineering}
+      Within this new bureaucratic ethos, social scientists see their role in the same light as the role of physicists in controlling the atom: they expect to one day be able to control human behavior.
+      They use the term ``human engineering'' in this regard, though it is poorly defined.
+      Regardless, it carries with it, as does the whole venture, issues of power and control.
+      This is not, of course, limited to those who have the bureaucratic ethos, but it is more alarming when pursued by these people because the lack of room for moralizing in their approach.
 \end{document}
