--- a/communs03/summary03.tex
+++ b/communs03/summary03.tex
@@ -19,9 +19,44 @@
   \maketitle
   \fullcitebib{eckert_think_1992}
   \section{Introduction}
-    Much work has been done on the interaction between gender and language
-  \section{Difference: Gender Identities}
-  \section{Power: Gender Relations}
-  \section{Epilog}
+    Eckert \& McConnell-Ginet describe how much work has been done on the interaction between gender and language, but lament the lack of a coherent theory of gender and language.
+    However, there is a ``framework'' that attempts to explain women's language as being the result of either difference or dominance, meaning that distinctions in women's language are either the result of a difference in cultural experiences from men or the result of men holding women in a dominated social position, respectively.
+    Eckert \& McConnell-Ginet see these are both playing out, though, and offer this article as their argument for that idea.
 
+    Importantly, they also indentify three assumptions in studies of gender and language that they wish to see abandonned: 1) ``gender can be isolated from other aspects of social identity and relations'', 2) ``gender has the same meaning across communities'', and 3) ``the linguistic manifestations of that meaning are also the same across communities.''
+
+    % In explaining the theoretical framework from which they are starting, they make two key points:
+    % \begin{itemize}
+    %   \item The dichotomy between sex and gender only adds confusion as ``[b]odies and biological processes are inextricably part of cultural histories''
+    %   \item It is important to have a concept of place that incorporates practice, so Eckert \& McConnell-Ginet use communities of practice as their unit of analysis
+    % \end{itemize}
+  \section{Difference: Gender Identities}
+    Eckert \& McConnell-Ginet begin by focusing mostly on the idea of the difference explanation of women's language.
+    They speak about miscommunication between men and women.
+    For the difference explanation, one would say that men expect their norms of communication to be at play and women expect their own, but Eckert \& McConnell-Ginet note that there is an assumption here that men and women either are not aware of each other's norms or that they think there is something wrong with each other's norms, which may not be the case at all.
+    % This seems to imply that the difference explanation cannot handle power asymmetries, but Eckert \& McConnell-Ginet do not see that as a necessary outcome of this explanation.
+    % In general, oppressed people may be very aware of the norms of their oppressors and vice versa, so it is not that power is ignored with this explanation but more that it is placed in the background.
+  \section{Power: Gender Relations}
+    Eckert \& McConnell-Ginet highlight the importance of power in women's linguistic behavior in this section, beginning with R. Lakoff's idea of the ``double bind'' that women face:
+    \begin{itemize}
+      \item ``Behavior that satisfies what is expected of her as a woman disqualifies her in the marketplace.''
+    \end{itemize}
+    That is, women are often expected to play subservient roles, and so that is expected to be reflected in their speech, but speaking in a subservient way makes them appear inappropriate for jobs that would give them more power in society.
+
+    % Eckert \& McConnell-Ginet also offer explicit examples of how power influences women's linguistic behavior.
+    % For instance, P. Fishman showed that women can have difficulty getting the floor in discussions with men and so employ prompts like, ``Do you know what?'', to do so as these allow men to save face and maintain their sense of authority by making it seem as though it is their privilege to allow women to speak or not to speak.
+
+    % They ultimately argue that the varied statuses of the participants has an impact on how speech strategies are evaluated, as in the examples from this section, but so do the identities of speakers, as in the previous section.
+  \section{Epilog}
+    % Eckert \& McConnell-Ginet, as a tangent, talk about the idea of symbolic privilege, which allows those with privilege to assume that their norms are the ones at play in interactions.
+    % They argue that this is not static, but rather varies from community to community.
+
+    Finally, they restate the importance of not treating men and women as monolithic groups.
+    In particular, this leads to overlooking a wealth of intragroup dynamics that can be very important to our understanding of gender and language, hence the need to ``look locally''.
+  \section{Questions}
+    \begin{enumerate}
+      \item Eckert \& McConnell-Ginet seem at least somewhat averse to drawing a sharp distinction between sex and gender. What are the implications of doing so or not doing so?
+      \item How convincing is the argument that women's language is the result of both difference and dominance and not one exlusively?
+      \item How important is the concept of communities of practice to their arguments? Could these same arguments be made using speech communities?
+    \end{enumerate}
 \end{document}
