--- a/comp_ling01/slides.tex
+++ b/comp_ling01/slides.tex
@@ -41,9 +41,16 @@
   }
 
   \section{Language Models}
-    \begin{frame}
-
-    \end{frame}
+    \subsection{What are they?}
+      \begin{frame}
+        \begin{block}{The probability of a document given some tokens}
+          \begin{itemize}
+            \item $p(w_1, w_2, \ldots, w_m)$
+            \item $w_m \in V$
+            \item $V = \{ \text{aardvark}, \text{abacus}, \ldots, \text{zither} \}$
+          \end{itemize}
+        \end{block}
+      \end{frame}
 
   \section{Language Classification}
 \end{document}
